tests/paczka1/fuzzy1/64353181.err
Error in line 1: m0iZ6 A155 100,0
Error in line 15: En4zI A954 56,3
Error in line 11: A954 A155 32,6
Error in line 10: hB7lyC5FL4 S329 56,2
Error in line 32: y5Pn4D A155 16,1
